--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
+    "react-select": "^2.0.0",
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
