--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
+    "glob-parent": "^5.1.2",
     "html-webpack-plugin": "^5.3.2",
     "node-sass": "^6.0.1",
     "sass-loader": "^12.1.0",
